// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box allows auto margin 1`] = `
<div
  className="box marginRightAuto"
/>
`;

exports[`Box allows zero values for whitespace 1`] = `
<div
  className="box"
/>
`;

exports[`Box correctly sets visually hidden 1`] = `
<div
  className="box xsDisplayVisuallyHidden"
/>
`;

exports[`Box dangerouslySetInlineStyle 1`] = `
<div
  className="box"
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`Box has correct *-flex-column classes when display is flexColumn 1`] = `
<div
  className="box lgDirectionColumn mdDirectionColumn smDirectionColumn xsDirectionColumn"
/>
`;

exports[`Box has correct *-hide classes when display is false 1`] = `
<div
  className="box lgDisplayNone mdDisplayNone smDisplayNone xsDisplayNone"
/>
`;

exports[`Box has correct *-inline-block classes when display is inlineBlock 1`] = `
<div
  className="box lgDisplayInlineBlock mdDisplayInlineBlock smDisplayInlineBlock xsDisplayInlineBlock"
/>
`;

exports[`Box has correct class when opacity is 0.5 1`] = `
<div
  className="box opacity05"
/>
`;

exports[`Box has correct class when opacity is 1 1`] = `
<div
  className="box opacity1"
/>
`;

exports[`Box has correct class when rounding is 1 1`] = `
<div
  className="box rounding1"
/>
`;

exports[`Box has correct class when rounding is circle 1`] = `
<div
  className="box circle"
/>
`;

exports[`Box has correct classes when borderSize is lg 1`] = `
<div
  className="box lightGrayBorder sizeLg solid"
/>
`;

exports[`Box has correct classes when display is flex 1`] = `
<div
  className="box"
/>
`;

exports[`Box has correct marginStart and marginEnd when marginStart and marginEnd are negative 1`] = `
<div
  className="box marginEndN3 marginStartN1"
/>
`;

exports[`Box has correct marginStart and marginEnd when marginStart equals 1 and marginEnd equals 2 1`] = `
<div
  className="box marginEnd2 marginStart1"
/>
`;

exports[`Box renders 1`] = `
<div
  className="box"
/>
`;
